@@ -75,7 +75,7 @@
 		<table class="head filter_table">
 			<thead>
 				<tr>
-					<th class="gloss_name">Quick Search</th>
+					<th class="gloss_name">Quick search</th>
 					<th>Quick buttons for specific searches.
 					<div>
 						The COVID-19 search follows the <a href="https://docs.google.com/document/d/11XTnrPw8K76JvBhFfnqo-1Z9BmgqzWv2bEz9QoDrw2k">IATI Publishing Guidance</a>. It currently searches the database for COVID-19 in title, activity and transaction description fields and looks for the relevant codes in the humanitarian-scope and tag element.
@@ -418,7 +418,7 @@
 <!-- SEARCH	 2	-->
 #search_trend2
 <div class="search_trend_wrap">	<!--	Trending search	-->
-  <span>Trending</span><a href="?aids=COVID-19#view=main" class="now">COVID-19</a><a href="?text_search=Beirut%20Explosion#view=main">Beirut Explosion</a><a href="?text_search=ebola#view=main">Ebola</a><a href="?text_search=hurricane dorian#view=main">Hurricane Dorian</a><a href="?text_search=locust#view=main">Locust</a>
+  <span>Quick search</span><a href="?aids=COVID-19#view=main" class="now">COVID-19</a><a href="?text_search=Beirut%20Explosion#view=main">Beirut Explosion</a><a href="?text_search=ebola#view=main">Ebola</a><a href="?text_search=hurricane dorian#view=main">Hurricane Dorian</a><a href="?text_search=locust#view=main">Locust</a>
 </div>
 
 <!-- GLOSSARY 2	-->
@@ -430,7 +430,7 @@
 		<table class="head filter_table">
 			<thead>
 				<tr>
-					<th class="gloss_name">Quick Search</th>
+					<th class="gloss_name">Quick search</th>
 					<th>Quick buttons for specific searches.
 					<div>
 						The COVID-19 search follows the <a href="https://docs.google.com/document/d/11XTnrPw8K76JvBhFfnqo-1Z9BmgqzWv2bEz9QoDrw2k">IATI Publishing Guidance</a>. It currently searches the database for COVID-19 in title, activity and transaction description fields and looks for the relevant codes in the humanitarian-scope and tag element.
