@@ -1,3 +1,8 @@
+Development Portal (2021-01-20 shi)
+==============================
+Update text for Quick search
+
+
 Development Portal (2021-01-18 shi)
 ==============================
 Search 2 update filter sector vocabulary
